# nahfstocks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sloccer.bat
doc/: agent.md  firstNames.txt  idea.md  lastNames.txt  last_names.py  names.txt  person_names.py  stock_names.py
doc/spec/: spec.aux  spec.out  spec.tex
doc/terv/: sub_spec.aux  sub_spec.tex  terv.aux  terv.out  terv.tex  terv.toc
doc/terv/uml/: lib.mdj
doc/terv/uml2/asd/: 128002  128130  128130.bodies  128258  128386  128386.bodies  128514  128642  128770  128770.bodies  128898  128898.bodies  129026  129154  129282  129282.bodies  129410  129538  129538.bodies  129666  129794  129922  130050  130434.bodies  130562.bodies  131074.bodies  131330.bodies  2.session  asd.prj
lib/: algorithms.h  prelude.h  types.h
lib/collections/: Map.h  Vector.cpp  Vector.h
lib/memory/: Rc.h  remove.cpp  remove.h
lib/option/: Option.h
lib/rand/: RandomProvider.cpp  RandomProvider.h
lib/string/: String.cpp  String.h
src/: main.cpp
src/cli/: CliHelper.cpp  CliHelper.h  CliQuestioner.cpp  CliQuestioner.h  CliTableBuilder.cpp  CliTableBuilder.h  SimulationCli.cpp  SimulationCli.h
src/company/: Company.cpp  Company.h  CompanyAgent.cpp  CompanyAgent.h  CompanyBuilder.cpp  CompanyBuilder.h  ICompany.cpp  ICompany.h  names_data.h
src/config/: Config.cpp  Config.h  ConfigValue.cpp  ConfigValue.h
src/events/: Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventDispatchingContext.h
src/exchange/: Exchange.cpp  Exchange.h  ExchangeBuilder.cpp  ExchangeBuilder.h  ExchangeConfig.h  ExchangeStats.h
src/exchange/exchange_api/: ExchangeApi.cpp  ExchangeApi.h  IExchangeApi.h  MarketContext.h  Order.cpp  Order.h  TraderRecordInExchange.cpp  TraderRecordInExchange.h
src/simulation/: Simulation.cpp  Simulation.h
src/trader/: ITrader.h  NormalTraderAgent.cpp  NormalTraderAgent.h  Trader.cpp  Trader.h  TraderAgent.cpp  TraderAgent.h  TraderAgentBuilder.cpp  TraderAgentBuilder.h  first_names_data.h  last_names_data.h
src/utils/: format_money.cpp  format_money.h  to_string.cpp  to_string.h
tests/: Tests.cpp  Tests.h  cc_test.h
tests/cli/: cli_mock.cpp  cli_mock.h
tests/company/: company_mock.h  company_tests.cpp  company_tests.h
tests/config/: config_mock.cpp  config_mock.h
tests/events/: events_mock.h  events_tests.cpp  events_tests.h
tests/exchange/: exchange_mock.cpp  exchange_mock.h  exchange_tests.cpp  exchange_tests.h
tests/lib/: lib_mocks.cpp  lib_mocks.h  lib_tests.cpp  lib_tests.h  libtests.cpp  libtests.h
tests/trader/: trader_tests.cpp  trader_tests.h
